--- a/进程调度算法/进程调度算法.vcxproj
+++ b/进程调度算法/进程调度算法.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{9A5706DE-E0E4-43EE-BE3C-622CC8E49DE1}</ProjectGuid>
+    <ProjectGuid>{962B4EAE-855B-4FAE-AD06-D6C1CA18D565}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>OperatingSystemAlgorithm</RootNamespace>
+    <RootNamespace>进程调度算法</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,6 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\OperatingSystem_Algorithm\PCB.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\OperatingSystem_Algorithm\PCB.cpp" />
+    <ClCompile Include="..\OperatingSystem_Algorithm\test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
