--- a/进程调度算法/进程调度算法.vcxproj
+++ b/进程调度算法/进程调度算法.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{962B4EAE-855B-4FAE-AD06-D6C1CA18D565}</ProjectGuid>
+    <ProjectGuid>{4C253EE1-E187-435C-9FA4-CB35D46B63C1}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>进程调度算法</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
@@ -139,11 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\OperatingSystem_Algorithm\PCB.h" />
+    <ClInclude Include="PCB.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\OperatingSystem_Algorithm\PCB.cpp" />
-    <ClCompile Include="..\OperatingSystem_Algorithm\test.cpp" />
+    <ClCompile Include="PCB.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
