--- a/银行家算法/银行家算法.vcxproj
+++ b/银行家算法/银行家算法.vcxproj
@@ -139,6 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="bankAlgorithm.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="bankAlgorithm.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
