--- a/银行家算法/银行家算法.vcxproj.filters
+++ b/银行家算法/银行家算法.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="bankAlgorithm.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
