哲学家算法一些修改

--- a/进程同步算法/进程同步算法.vcxproj
+++ b/进程同步算法/进程同步算法.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="philosopher.h" />
     <ClInclude Include="Producer_Customer_1to1.h" />
     <ClInclude Include="Producer_Customer_1toN.h" />
     <ClInclude Include="Producer_Customer_Nto1.h" />
@@ -26,11 +27,14 @@
     <ClInclude Include="RW_problem.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="philosopher.cpp" />
+    <ClCompile Include="philosopher_Eating.cpp" />
     <ClCompile Include="Producer_Customer_1to1.cpp" />
     <ClCompile Include="Producer_Customer_1toN.cpp" />
     <ClCompile Include="Producer_Customer_Nto1.cpp" />
     <ClCompile Include="Producer_Customer_NtoN.cpp" />
     <ClCompile Include="RW_problem.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
